--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Flask-Assets==0.12
 Flask-Cors==3.0.7
 Flask-Login==0.5.0
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 idna==2.9
 isort==4.3.21
 itsdangerous==1.1.0
@@ -37,7 +38,9 @@ python-dotenv==0.10.1
 requests==2.23.0
 s3transfer==0.3.3
 six==1.12.0
+style==1.1.0
 typed-ast==1.4.1
+update==0.0.1
 urllib3==1.25.8
 webassets==0.12.1
 Werkzeug==0.14.1
